@@ -48,7 +48,7 @@ __attribute__((cpychecker_type_object_for_typedef(typename)))
 #   define CIRCUM_RADIUS 2	// @CTB remove
 #   define CIRCUM_MAX_VOL 200	// @CTB remove
 
-#   define SAVED_FORMAT_VERSION 3
+#   define SAVED_FORMAT_VERSION 4
 #   define SAVED_COUNTING_HT 1
 #   define SAVED_HASHBITS 2
 #   define SAVED_TAGS 3
